# goit-pythonweb-hw-012

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tests-examples.py
docs/source/: conf.py  index.rst  modules.rst
src/: dependencies.py  main.py  schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/services/: redis_service.py
tests/integration/: test_contacts_api.py  test_users_admin_api.py
tests/repository/: test_contacts.py  test_users.py  test_users_admin.py
