[tool.poetry]
name = "fastapi-contacts"
version = "0.1.0"
description = "FastAPI Contacts Management Application"
authors = ["sandrey88"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.110.0"
starlette = ">=0.36.0"
uvicorn = "0.24.0"
sqlalchemy = "2.0.23"
psycopg2-binary = "2.9.9"
pydantic = "^2.10.1"
python-dotenv = "1.0.0"
alembic = "1.12.1"
email-validator = "^2.2.0"
cloudinary = "^1.44.0"
fastapi-mail = "^1.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-multipart = "^0.0.9"
slowapi = "^0.1.8"
redis = "^5.2.1"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
sphinx = "^8.2.3"
pytest-cov = "^6.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
